* Don't use depreciated u tags, use css class (Help.template.php, ManageSettings.english.php) [Bug 3119]  * Defined a couple of classes, centertext (already defined in Curve), lefttext, righttext which will use in future instead of div align.
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8311 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/babylon/style.css
+++ b/Themes/babylon/style.css
@@ -256,7 +256,23 @@ code
 {
 	font-size: large;
 }
-
+.centertext
+{
+	margin: 0 auto;
+	text-align: center;
+}
+.righttext
+{
+	margin-left: auto;
+	margin-right: 0;
+	text-align: right;
+}
+.lefttext
+{
+	margin-left: 0;
+	margin-right: auto;
+	text-align: left;
+}
 /* This is the white header area where the title, menu bars, and header boxes are. */
 #headerarea
 {
